--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>ToDo</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css" rel="stylesheet">
     </head>
     <body>
         <div id="root"></div>
